Hasta el capítulo 5 inclusive

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -5100,7 +5100,7 @@ etric {SAR} data},
   
   @article{cox1968,
   	ISSN = {00359246},
-  	author = {D. R. Cox, E. J. Snell},
+  	author = {D. R. Cox and E. J. Snell},
   	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
   	number = {2},
   	pages = {248-275},
@@ -6154,3 +6154,10 @@ doi = {10.1109/IGARSS.2017.8127630}
 	year = "2018"
 }
 
+@Article{AGeneralizedGaussianCoherentScattererModelforCorrelatedSARTexture,
+	author  = {D.-X. Yue and F. Xu and A. C. Frery and Y.-Q. Jin},
+	journal = {IEEE Transactions on Geoscience and Remote Sensing},
+	title   = {A Generalized {G}aussian Coherent Scatterer Model for Correlated {SAR} Texture},
+	year    = {2020},
+	doi     = {10.1109/TGRS.2019.2958125},
+}
