--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -16,25 +16,20 @@
 % cuando se  está en un apéndice.  Eso se utiliza en  la definición de
 % las cabeceras.
 \usepackage{titlesec}
-\usepackage{amsfonts,amssymb}
-\usepackage{amsmath}
+\usepackage{amsfonts,amssymb,amsmath}
 \usepackage{graphicx}
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{amsthm}
-\usepackage{lipsum,multicol}
-%\usepackage{calligra}
-%\usepackage{calrsfs}
+\usepackage{multicol}
+\usepackage[sc]{mathpazo}
 \usepackage{mathrsfs}
-\usepackage{epstopdf}
 \usepackage{subfigure}
-%\usepackage{dsfont}
 \usepackage{filecontents}
-%\usepackage{verbatim}
-\usepackage{amssymb}
+
+
 \usepackage[T1]{fontenc}
-%\usepackage[numbers]{natbib}
 \usepackage{color}
 \usepackage{multirow}
 \usepackage{booktabs}
@@ -51,15 +46,9 @@
 
 \usepackage{float}
 
-%\usepackage{dcolumn}
-
-%\usepackage{natbib}
-
 \usepackage{tikz}
 \usetikzlibrary{shapes,snakes,arrows,trees}
 \usepackage[abs]{overpic}
-%\usepackage[active,pdftex,tightpage]{preview}
-%\usepackage{tikz-cd}
 
 \usepackage{apalike}
 
